[tool.poetry]
name = "xploitv"
version = "0.1.1"
description = "An automated Xploitv grabber"
authors = ["Kike Fontan <kikefontanlorenzo@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
